src/objects/WebCart.object
<CustomObject>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_Level_Comment__c</fullName>
        <label>Line Level Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Level_Comment__c</fullName>
        <label>Order Level Comment</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>All_WebCarts</fullName>
        <columns>Name</columns>
        <columns>CreatedDate</columns>
        <columns>GrandTotalAmount</columns>
        <columns>Status</columns>
        <columns>Owner</columns>
        <columns>Account</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Type</field>
            <operation>equals</operation>
            <value>C</value>
        </filters>
        <label>All Active Carts</label>
    </listViews>
    <listViews>
        <fullName>Owned_WebCarts</fullName>
        <columns>Name</columns>
        <columns>CreatedDate</columns>
        <columns>GrandTotalAmount</columns>
        <columns>Status</columns>
        <columns>Account</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Type</field>
            <operation>equals</operation>
            <value>C</value>
        </filters>
        <label>My Active Carts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>